# eridian-ai

./: .brief.md  .gitignore  .gitmodules  AGENTS.md  Argcfile.sh  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  add-list-prompts.md  claude_resume.sh  code_outline.md  config.example.yaml  mise.toml  models.yaml  resume-claude.sh  test.md
.pi/extensions/: aichat-bridge.js
.zed/: settings.json
assets/: extensions-capture-server.py  playground.html  preflight-test-role-no-tools.md  preflight-test-role-with-tools.md  schema-test.yaml
assets/generated-documentation/: instructions.md
assets/pi-extensions/: aichat-bridge.js
assets/roles/: %create-prompt%.md  %explain-shell%.md  %one-function%.md  guardrail-injection.md  guardrail-pii.md  guardrail-topic.md
crates/eridian-trace/: Cargo.toml
crates/eridian-trace/src/: lib.rs  parse.rs  schema.rs
demos/: phase-42e1-wire-request-capture.md  phase-7-5.md
docs/: 2026-03-10-junie-plan.md  2026-03-16-simple-planning.md  ROADMAP.md  analysis.md  demo.md  instructions.md  macros.md  repl-pi.md
docs/analysis/: 001-model-aware-variables.md  2026-03-02-meta-analysis.md  2026-03-06-output-format.md  epic-10.md  (+18 more)
memory/: MEMORY.md  feedback_cite_sources.md
pi-extensions/: README.md  package.json  tsconfig.json
scripts/: dev-install.sh  dev-run.sh
src/: cache.rs  cli.rs  compare.rs  context_budget.rs  demo.rs  discovery.rs  exec_pi.rs  explain.rs  function.rs  install_deps.rs  main.rs  mcp.rs  mcp_client.rs  pipe.rs  serve.rs  strip_thinking.rs
tests/: client.rs  compatibility.rs  explain_context.rs  qol_flags.rs
(+347 files in other folders)
