[package]
name = "eridian-trace"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Streaming-safe reader and assertion helpers for the SPEC-001 Eridian trace format."

# Zero new dependencies: only serde + serde_json, both already in the workspace.
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }